--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Script\AreaGeneration.cs" />
      <Compile Include="Assets\Script\CameraMove.cs" />
+     <Compile Include="Assets\Script\CapitlaSystem1.cs" />
      <Compile Include="Assets\Script\MapGeneration.cs" />
      <Compile Include="Assets\Script\NewsGUI.cs" />
      <Compile Include="Assets\Script\NewsScript.cs" />
