--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,10 +48,15 @@
   <ItemGroup>
      <Compile Include="Assets\Script\AreaGeneration.cs" />
      <Compile Include="Assets\Script\CameraMove.cs" />
+     <Compile Include="Assets\Script\CapitalSystem2.cs" />
+     <Compile Include="Assets\Script\CapitalSystem3.cs" />
+     <Compile Include="Assets\Script\CapitalSystem4.cs" />
+     <Compile Include="Assets\Script\CapitalSystem5.cs" />
      <Compile Include="Assets\Script\CapitlaSystem1.cs" />
      <Compile Include="Assets\Script\MapGeneration.cs" />
      <Compile Include="Assets\Script\NewsGUI.cs" />
      <Compile Include="Assets\Script\NewsScript.cs" />
+     <Compile Include="Assets\Script\SettingUI.cs" />
      <None Include="Assets\Skyboxes\_skybox info.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
