--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Script\CapitalSystem5.cs" />
      <Compile Include="Assets\Script\CapitlaSystem1.cs" />
      <Compile Include="Assets\Script\MapGeneration.cs" />
+     <Compile Include="Assets\Script\NationScript.cs" />
      <Compile Include="Assets\Script\NationStateUI.cs" />
      <Compile Include="Assets\Script\NewsGUI.cs" />
      <Compile Include="Assets\Script\NewsScript.cs" />
