--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\Script\NationStateUI.cs" />
      <Compile Include="Assets\Script\NewsGUI.cs" />
      <Compile Include="Assets\Script\NewsScript.cs" />
+     <Compile Include="Assets\Script\PlayerState.cs" />
      <Compile Include="Assets\Script\SettingUI.cs" />
      <Compile Include="Assets\Script\StateUI.cs" />
      <Compile Include="Assets\Script\Timer.cs" />
