해적 시스템 기초 구현, 여러가지 등등

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\Script\NationStateUI.cs" />
      <Compile Include="Assets\Script\NewsGUI.cs" />
      <Compile Include="Assets\Script\NewsScript.cs" />
+     <Compile Include="Assets\Script\Pirates.cs" />
      <Compile Include="Assets\Script\PlayerState.cs" />
      <Compile Include="Assets\Script\SettingUI.cs" />
      <Compile Include="Assets\Script\StateUI.cs" />
